test/instance-checks-3.err.expect
test/instance-checks-3.ktn:1:1: error: cannot solve scalar type constraint int = t1
test/instance-checks-3.ktn:1:1: note: t1 is from here
test/instance-checks-3.ktn:1:13: note: int is from here
